--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
             "es6"
         ],
         "module": "commonjs",
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "bin/js",
         "declaration": false,
         "moduleResolution": "node",
